llama install instuctions

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 
-2024/assets/
+/2024/assets/
+/2024/py/models/
+/2024/py/models/
 /mvenv/
 2022/googlsheetpython/shreadsheetfromdrive/keys/
+
+/2024/py/pt/latest_llama/Llama-3.2-11B-Vision-Instruct/
+/2024/py/pt/Hface
